<resources>
    <string name="app_name">My Library</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Your Profile</string>
    <string name="nav_header_subtitle">Your Email ID</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_profile">Your Profile</string>
    <string name="Menu_store_Books">Book Store</string>
    <string name="menu_rents_books">Rent\'s Books</string>
    <string name="menu_buy_Books">Your Books</string>
    <string name="menu_notes">Your Notes</string>
    <string name="home_window">Home Window</string>
    <string name="this_is_notes_fragment">This is Notes fragment</string>
    <string name="this_is_profile_fragement">This is profile Fragement</string>
    <string name="this_is_store_fragment">This is Store fragment</string>
    <string name="this_is_your_book_fragment">This is your book fragment</string>
    <string name="this_is_rent_book_fragment">This is Rent book fragment</string>
    <string name="login">Login</string>
    <string name="user_name_email_id">User name/ Email id</string>
    <string name="password">Password</string>
    <string name="don_t_have_an_account_create_account">Don\'t have an account / Create Account</string>
</resources>