<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/menu_home"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_profile"
            android:icon="@drawable/menu_circle"
            android:title="@string/menu_profile" />
        <item
            android:id="@+id/nav_AllBooks"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/Menu_store_Books" />
        <item
            android:id="@+id/nav_yourBook"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/menu_buy_Books" />
        <item
            android:id="@+id/nav_rentBook"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/menu_rents_books" />
        <item
            android:id="@+id/nav_notes"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/menu_notes" />
    </group>
</menu>