<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.example.myapplication.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_AllBooks"
        android:name="com.example.myapplication.ui.store.StoreFragment"
        android:label="@string/Menu_store_Books"
        tools:layout="@layout/fragment_store" />

    <fragment
        android:id="@+id/nav_profile"
        android:name="com.example.myapplication.ui.profile.ProfileFragment"
        android:label="@string/menu_profile"
        tools:layout="@layout/fragment_profile" />

    <fragment
        android:id="@+id/nav_rentBook"
        android:name="com.example.myapplication.ui.rentbooks.RentBooksFragment"
        android:label="@string/menu_rents_books"
        tools:layout="@layout/fragment_rentbooks" />

    <fragment
        android:id="@+id/nav_notes"
        android:name="com.example.myapplication.ui.notes.NotesFragment"
        android:label="@string/menu_rents_books"
        tools:layout="@layout/fragment_notes" />

    <fragment
        android:id="@+id/nav_yourBook"
        android:name="com.example.myapplication.ui.yourbooks.YourbooksFragment"
        android:label="@string/menu_rents_books"
        tools:layout="@layout/fragment_yourbooks" />


</navigation>